--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -1,31 +1,57 @@
-*, *::before *::after{
+* {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
     font-family: 'Courier New', Courier, monospace;
 }
 
-
 body {
-    padding: 0;
-    margin: 0;
-    display: flex;
-    width: 100vw;
-    height: 100vh;
+    background-color: white;  
+}
+
+
+.info-box {
+    width: 100%;
+    height: 60px;
     justify-content: center;
-    align-items: center;   
+    align-items: center;
+    display: flex;
+    align-items: center;
+    font-size: 20px;
+    font-weight: bolder;
+}
+
+.info {
+    justify-content: center;
+    display: flex;
+    align-items: center;
+    font-size: 16px;
+    font-weight: bolder;
+}
+
+.timer {
+    display: flex;
+}
+
+.start-btn {
+    position: absolute;
+    top: 20%;
+    font-size: 20px;
+    font-weight: bold;
 }
 
 .container {
-    width: 800px;
-    max-width: 80%;
-    background-color: white;
-    border-radius: 5px;
+    width: 100%;
+    height: 60px;
     padding: 10px;
     color: black;
+    justify-content: center;
+
 }
 
-.btn-grid {
+.btn-grid { 
     display: grid;
-    grid-template-columns: repeat(2, auto);
+    grid-template-columns: repeat(2, auto); 
     gap: 10px;
     margin: 20px 0;
     color: black;
@@ -44,7 +70,15 @@ body {
     border-color: black;
 }
 
-.start-btn, .next-btn {
+.btn.correct {
+    color: cyan;
+}
+
+.btn.wrong {
+    color: red;
+}
+
+.next-btn {
     font-size: 1.5rem;
     font-weight: bold;
     padding: 10px 10px;
@@ -59,4 +93,8 @@ body {
 
 .hide {
     display: none;
+}
+
+.timer {
+    top: 100%;
 }
