--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -31,6 +31,9 @@ body {
 
 .timer {
     display: flex;
+    position: fixed;
+    top: 0px;
+    right: 0px;
 }
 
 .start-btn {
@@ -93,8 +96,4 @@ body {
 
 .hide {
     display: none;
-}
-
-.timer {
-    top: 100%;
 }
