--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -7,6 +7,8 @@
 
 body {
     background-color: white;  
+    margin-left: auto;
+    margin-right: auto;
 }
 
 
@@ -29,24 +31,27 @@ body {
     font-weight: bolder;
 }
 
-.timer {
+.time-box {
     display: flex;
     position: fixed;
     top: 0px;
     right: 0px;
+    font-weight: bolder;
 }
 
 .start-btn {
-    position: absolute;
-    top: 20%;
+    /* position: absolute; */
+    /* top: 20%; */
     font-size: 20px;
     font-weight: bold;
 }
 
 .container {
+    position: relative;
     width: 100%;
-    height: 60px;
+    height: 200px;
     padding: 10px;
+    display: flex;
     color: black;
     justify-content: center;
 
@@ -82,14 +87,17 @@ body {
 }
 
 .next-btn {
-    font-size: 1.5rem;
+    position: absolute;
+    font-size: 14px;
     font-weight: bold;
     padding: 10px 10px;
-
+    bottom: 0;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .controls {
-    display: flex;
+    display: block;
     justify-content: center;
     align-items: center;
 }
