high scores mess

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -106,51 +106,4 @@ body {
     display: none;
 }
 
-/* end page CSS */
-
-
-.end-form-container {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    max-width: 30rem;
-}
-
-input {
-    margin-bottom: 1rem;
-    width: 20rem;
-    padding: 1.5rem;
-    font-size: 1.8rem;
-    border: none;
-}
-
-input::placeholder {
-    color:slateblue
-}
-
-#username {
-    margin-bottom: 3rem;
-    width: 100%;
-    outline: none;
-}
-
-#end-text {
-    font-size: 2.4rem;
-    color: white;
-    text-align: center;
-}
-
-#saveScoreBtn {
-    border:none;
-}
-
-#highScoresList {
-    list-style: none;
-    margin-bottom: 4rem;
-}
-
-.high-score {
-    font-size: 2.8rem;
-    margin-bottom: 0.5rem;
-}
+/* highscores CSS */
