--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -106,4 +106,11 @@ body {
     display: none;
 }
 
+.initialsform {
+    position: flex;
+    margin-left: auto;
+    margin-right: auto;
+
+}
+
 /* highscores CSS */
